--- a/config/config.json
+++ b/config/config.json
@@ -5,13 +5,15 @@
     "database":"content_api_development",
     "host":"127.0.0.1"
   },
-  "test":{
+  "test": {
+    "dialect": "sqlite",
+    "storage": "/tmp/database.sqlite",
     "username":"root",
     "password":null,
     "database":"content_api_test",
     "host":"127.0.0.1"
   },
-  "production":{
+  "production": {
     "username":"root",
     "password":null,
     "database":"content_api_production",
