--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "sqlite3": "2.1.x"
   },
   "scripts": {
     "test": "mocha test/**"
