use sqlite in development because I forget to set NODE_ENV

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,7 @@
 {
   "development": {
+    "dialect": "sqlite",
+    "storage": "/tmp/database.sqlite",
     "username":"root",
     "password":null,
     "database":"content_api_development",
